fixing last parts